Bug fixes and ui improvements after locale implementation

--- a/lib/utils/localization/app_ru.arb
+++ b/lib/utils/localization/app_ru.arb
@@ -22,13 +22,13 @@
   "registerAccount": "Зарегистрируйте новый аккаунт! ",
   "register": "Зарегистрироваться",
   "logIn": "Войти",
-  "mainScreenGoodDay": "Добрый день, ",
+  "mainScreenGoodDay": "Привет, ",
   "mainScreenHabits": "Привычки",
-  "mainScreenMoodStatistic": "Статистика настроения",
+  "mainScreenMoodStatistic": "Настроение",
   "mainScreenSharedStories": "Истории",
   "homeScreenQuestion": "Что вам делать сегодня?",
   "homeScreenMeditation": "Медитация",
-  "homeScreenBreathingPractice": "Дыхательные практики",
+  "homeScreenBreathingPractice": "Дыхание",
   "homeScreenSelfTests": "Тесты",
   "homeScreenToDoListPhrase": "Проверьте свои привычки",
   "homeScreenToDoListAdd": "Добавить привычку",
@@ -40,7 +40,7 @@
   "habitsScreenFullCompletion": "Отлично, вы справились!",
   "habitsScreenPartCompletion": "Продолжайте в том же духе!",
   "habitsScreenPartEmptyHabits": "Добавьте привычки для их выполнения!",
-  "habitsScreenAddHabit": "Добавьте новую привычку!",
+  "habitsScreenAddHabit": "Новая привычка!",
   "moodScreenPhrase": "Проверка настроения",
   "sharedStoriesScreenNoUsersStories": "У нас нет историй пользователей...",
   "sharedStoriesScreenNoStories": "У вас нет историй, добавьте их...",
