Settings screen localization and reisign, support screen started and some minor fixes

--- a/lib/utils/localization/app_en.arb
+++ b/lib/utils/localization/app_en.arb
@@ -52,7 +52,15 @@
   "drawerProfile": "Profile",
   "drawerAboutUs": "About Us",
   "drawerSupport": "Help and Support",
+  "supportInfo": "If you encounter any errors or want to leave feedback or suggestions, you can do so in the comments section in the app store, or here:",
   "drawerSettings": "Settings",
+  "settingsChangeLanguage": "Change language:",
+  "settingsChangeTheme": "Change theme:",
+  "settingsDarkTheme": "Dark",
+  "settingsLightTheme": "Light",
+  "settingsDeleteData":"Delete User",
+  "settingsDataDeletionInfo": "Data will be deleted, and can't be restored, are you sure?",
+  "settingsDataDeletionConfirm": "Confirm Deletion",
   "drawerLogOut": "Log out",
   "habits": "habits",
   "submit": "Submit",
@@ -64,7 +72,11 @@
   "emotionBored": "Bored",
   "emotionSad": "Sad",
   "emotionAngry": "Angry",
-  "russianLanguage": "Russian",
-  "englishLanguage": "English",
-  "ok": "OK"
+  "russianLanguage": "RU",
+  "englishLanguage": "EN",
+  "belarusianLanguage": "BY",
+  "polishLanguage": "PL",
+  "ok": "OK",
+  "yes": "Yes",
+  "no":"No"
 }
