--- a/lib/utils/localization/app_ru.arb
+++ b/lib/utils/localization/app_ru.arb
@@ -52,7 +52,15 @@
   "drawerProfile": "Профиль",
   "drawerAboutUs": "О нас",
   "drawerSupport": "Поддержка",
+  "supportInfo": "Если вы столкнулись с ошибками или хотите оставить отзыв, либо пожелание, вы можете это сделать в разделе комментариев в магазине приложений, либо здесь:",
   "drawerSettings": "Настройки",
+  "settingsChangeLanguage": "Сменить язык:",
+  "settingsChangeTheme": "Сменить тему:",
+  "settingsDarkTheme": "Тёмная",
+  "settingsLightTheme": "Светлая",
+  "settingsDeleteData":"Удалить данные",
+  "settingsDataDeletionInfo": "Данные будут удалены и не могут быть восстановлены. Вы уверены?",
+  "settingsDataDeletionConfirm": "Подтверждение удаления",
   "drawerLogOut": "Выйти",
   "habits": "привычки",
   "submit": "Отправить",
@@ -64,7 +72,11 @@
   "emotionBored": "Скучно",
   "emotionSad": "Грустно",
   "emotionAngry": "Зол",
-  "russianLanguage": "Русский",
-  "englishLanguage": "Английский",
-  "ok": "OK"
+  "russianLanguage": "РУ",
+  "englishLanguage": "АНГЛ",
+  "belarusianLanguage": "БЕЛ",
+  "polishLanguage": "ПОЛ",
+  "ok": "OK",
+  "yes": "Да",
+  "no":"Нет"
 }
