App ivon changed, filled support screen and about us screen, some minor fixes

--- a/lib/utils/localization/app_be.arb
+++ b/lib/utils/localization/app_be.arb
@@ -26,7 +26,7 @@
   "mainScreenHabits": "Звычкі",
   "mainScreenMoodStatistic": "Настроение",
   "mainScreenSharedStories": "Iсторыі",
-  "homeScreenQuestion": "Што вам рабіць сёння?",
+  "homeScreenQuestion": "Як вы сёння??",
   "homeScreenMeditation": "Медытацыя",
   "homeScreenBreathingPractice": "Дыханне",
   "homeScreenSelfTests": "Тэсты",
@@ -51,6 +51,8 @@
   "sharedStoriesScreenCreationStoryDescriptionEmpty": "Увядзіце апісанне",
   "drawerProfile": "Профіль",
   "drawerAboutUs": "Пра нас",
+  "aboutUsDeveloper":"Распрацаваў Максім Купцоў",
+  "aboutUsDesigner":"Стварыла UI/UX Крысціна Гаўрылава",
   "drawerSupport": "Падтрымка",
   "supportInfo": "Калі вы сутыкнуліся з памылкамі ці хочаце пакінуць водгук, альбо пажаданне, вы можаце гэта зрабіць у раздзеле каментароў у краме прыкладанняў, альбо тут:",
   "drawerSettings": "Налады",
