--- a/lib/utils/localization/app_pl.arb
+++ b/lib/utils/localization/app_pl.arb
@@ -26,7 +26,7 @@
   "mainScreenHabits": "Nawyki",
   "mainScreenMoodStatistic": "Nastroje",
   "mainScreenSharedStories": "Historie",
-  "homeScreenQuestion": "Co dziś robisz?",
+  "homeScreenQuestion": "Jak się dzisiaj miewasz??",
   "homeScreenMeditation": "Medytacja",
   "homeScreenBreathingPractice": "Ćwiczenia oddechowe",
   "homeScreenSelfTests": "Testy",
@@ -51,6 +51,8 @@
   "sharedStoriesScreenCreationStoryDescriptionEmpty": "Wprowadź opis",
   "drawerProfile": "Profil",
   "drawerAboutUs": "O nas",
+  "aboutUsDeveloper":"Opracowany przez Maxima Kuptsova",
+  "aboutUsDesigner":"UI/UX stworzony przez Kristinę Gavrilovą",
   "drawerSupport": "Wsparcie",
   "supportInfo": "Jeśli napotkasz jakieś błędy lub chcesz zostawić opinię lub sugestie, możesz to zrobić w sekcji komentarzy w sklepie z aplikacjami lub tutaj:",
   "drawerSettings": "Ustawienia",
