--- a/lib/utils/localization/app_ru.arb
+++ b/lib/utils/localization/app_ru.arb
@@ -26,7 +26,7 @@
   "mainScreenHabits": "Привычки",
   "mainScreenMoodStatistic": "Настроение",
   "mainScreenSharedStories": "Истории",
-  "homeScreenQuestion": "Что вам делать сегодня?",
+  "homeScreenQuestion": "Как вы сегодня?",
   "homeScreenMeditation": "Медитация",
   "homeScreenBreathingPractice": "Дыхание",
   "homeScreenSelfTests": "Тесты",
@@ -51,6 +51,8 @@
   "sharedStoriesScreenCreationStoryDescriptionEmpty": "Введите описание",
   "drawerProfile": "Профиль",
   "drawerAboutUs": "О нас",
+  "aboutUsDeveloper":"Разработал Максим Купцов",
+  "aboutUsDesigner":"Создала UI/UX Кристина Гаврилова",
   "drawerSupport": "Поддержка",
   "supportInfo": "Если вы столкнулись с ошибками или хотите оставить отзыв, либо пожелание, вы можете это сделать в разделе комментариев в магазине приложений, либо здесь:",
   "drawerSettings": "Настройки",
