USer deletion logic added(need some fixes), about screen updated, mood data now hadles in other way to deal localisation problem, localisation added to some other widgets

--- a/lib/utils/localization/app_be.arb
+++ b/lib/utils/localization/app_be.arb
@@ -52,7 +52,8 @@
   "drawerProfile": "Профіль",
   "drawerAboutUs": "Пра нас",
   "aboutUsDeveloper":"Распрацаваў Максім Купцоў",
-  "aboutUsDesigner":"Стварыла UI/UX Крысціна Гаўрылава",
+  "aboutUsDesigner":"Стварылі UI/UX Крысціна Гаўрылава",
+  "aboutUsSecondDesigner":"Вера Демідзенка",
   "drawerSupport": "Падтрымка",
   "supportInfo": "Калі вы сутыкнуліся з памылкамі ці хочаце пакінуць водгук, альбо пажаданне, вы можаце гэта зрабіць у раздзеле каментароў у краме прыкладанняў, альбо тут:",
   "drawerSettings": "Налады",
