--- a/lib/utils/localization/app_en.arb
+++ b/lib/utils/localization/app_en.arb
@@ -53,6 +53,7 @@
   "drawerAboutUs": "About Us",
   "aboutUsDeveloper":"Developed by Maksim Kuptsov",
   "aboutUsDesigner":"UI/UX Design by Kristina Khaurilava",
+  "aboutUsSecondDesigner":"and Vera Dzemidzenka",
   "drawerSupport": "Help and Support",
   "supportInfo": "If you encounter any errors or want to leave feedback or suggestions, you can do so in the comments section in the app store, or here:",
   "drawerSettings": "Settings",
