--- a/lib/utils/localization/app_pl.arb
+++ b/lib/utils/localization/app_pl.arb
@@ -53,6 +53,7 @@
   "drawerAboutUs": "O nas",
   "aboutUsDeveloper":"Opracowany przez Maxima Kuptsova",
   "aboutUsDesigner":"UI/UX stworzony przez Kristinę Gavrilovą",
+  "aboutUsSecondDesigner":"i Verę Demidenko",
   "drawerSupport": "Wsparcie",
   "supportInfo": "Jeśli napotkasz jakieś błędy lub chcesz zostawić opinię lub sugestie, możesz to zrobić w sekcji komentarzy w sklepie z aplikacjami lub tutaj:",
   "drawerSettings": "Ustawienia",
