--- a/lib/utils/localization/app_ru.arb
+++ b/lib/utils/localization/app_ru.arb
@@ -52,7 +52,8 @@
   "drawerProfile": "Профиль",
   "drawerAboutUs": "О нас",
   "aboutUsDeveloper":"Разработал Максим Купцов",
-  "aboutUsDesigner":"Создала UI/UX Кристина Гаврилова",
+  "aboutUsDesigner":"Создали UI/UX Кристина Гаврилова",
+  "aboutUsSecondDesigner":"Вера Демиденко",
   "drawerSupport": "Поддержка",
   "supportInfo": "Если вы столкнулись с ошибками или хотите оставить отзыв, либо пожелание, вы можете это сделать в разделе комментариев в магазине приложений, либо здесь:",
   "drawerSettings": "Настройки",
