--- a/lib/utils/localization/app_en.arb
+++ b/lib/utils/localization/app_en.arb
@@ -52,7 +52,7 @@
   "drawerProfile": "Profile",
   "drawerAboutUs": "About Us",
   "aboutUsDeveloper":"Developed by Maksim Kuptsov",
-  "aboutUsDesigner":"UI/UX Design by Kristina Khaurilava",
+  "aboutUsDesigner":"UI/UX Design by Kristina Haurilova",
   "aboutUsSecondDesigner":"and Vera Dzemidzenka",
   "drawerSupport": "Help and Support",
   "supportInfo": "If you encounter any errors or want to leave feedback or suggestions, you can do so in the comments section in the app store, or here:",
