Email validator added and some localisation changes

--- a/lib/utils/localization/app_en.arb
+++ b/lib/utils/localization/app_en.arb
@@ -18,6 +18,7 @@
   "authEmailIsEmpty": "Enter your Email",
   "authPassword": "Password",
   "authPasswordIsEmpty": "Enter your password",
+  "authEmailInvalid": "Invalid email address",
   "accountExists": "Already have an account? ",
   "registerAccount": "Register new account! ",
   "register": "Register",
@@ -32,7 +33,7 @@
   "homeScreenSelfTests": "Self Tests",
   "homeScreenToDoListPhrase": "Check out your habits",
   "homeScreenToDoListAdd": "Add habit",
-  "homeScreenHabitCreationHabit": "Your habit",
+  "homeScreenHabitCreationHabit": "Your habit!",
   "homeScreenHabitCreationIsEmpty": "Add your habit first",
   "homeScreenHabitCreationLenghtError": "Text length cannot exceed 30 characters",
   "homeScreenDefaultQuote": "Change your thoughts and you will change the world",
@@ -68,7 +69,7 @@
   "habits": "habits",
   "submit": "Submit",
   "create": "Create",
-  "howAreYou": "How are you today?",
+  "howAreYou": "New habit!",
   "emotionHappy": "Happy",
   "emotionGood": "Good",
   "emotionMeh": "Meh",
