--- a/lib/utils/localization/app_pl.arb
+++ b/lib/utils/localization/app_pl.arb
@@ -18,6 +18,7 @@
   "authEmailIsEmpty": "Wprowadź swój e-mail",
   "authPassword": "Hasło",
   "authPasswordIsEmpty": "Wprowadź hasło",
+  "authEmailInvalid": "Nieprawidłowy adres pocztowy",
   "accountExists": "Masz już konto? ",
   "registerAccount": "Zarejestruj nowe konto! ",
   "register": "Zarejestruj się",
@@ -68,7 +69,7 @@
   "habits": "nawyki",
   "submit": "Wyślij",
   "create": "Utwórz",
-  "howAreYou": "Jak się czujesz dziś?",
+  "howAreYou": "Twój nawyk!",
   "emotionHappy": "Szczęśliwy",
   "emotionGood": "Dobrze",
   "emotionMeh": "Przeciętnie",
