--- a/lib/utils/localization/app_be.arb
+++ b/lib/utils/localization/app_be.arb
@@ -18,6 +18,7 @@
   "authEmailIsEmpty": "Увядзіце ваш Email",
   "authPassword": "Пароль",
   "authPasswordIsEmpty": "Увядзіце пароль",
+  "authEmailInvalid": "Некарэктны паштовы адрас",
   "accountExists": "Ужо ёсць акаўнт? ",
   "registerAccount": "Зарэгіструйце новы акаўнт! ",
   "register": "Зарэгістравацца",
@@ -68,7 +69,7 @@
   "habits": "звычкі",
   "submit": "Адправіць",
   "create": "Стварыць",
-  "howAreYou": "Як ты сёння?",
+  "howAreYou": "Новая звычка!",
   "emotionHappy": "Шчаслівы",
   "emotionGood": "Добра",
   "emotionMeh": "Мех",
