--- a/lib/utils/localization/app_ru.arb
+++ b/lib/utils/localization/app_ru.arb
@@ -18,6 +18,7 @@
   "authEmailIsEmpty": "Введите ваш Email",
   "authPassword": "Пароль",
   "authPasswordIsEmpty": "Введите пароль",
+  "authEmailInvalid": "Некорректный почтовый адрес",
   "accountExists": "Уже есть аккаунт? ",
   "registerAccount": "Зарегистрируйте новый аккаунт! ",
   "register": "Зарегистрироваться",
@@ -68,7 +69,7 @@
   "habits": "привычки",
   "submit": "Отправить",
   "create": "Создать",
-  "howAreYou": "Как ты сегодня?",
+  "howAreYou": "Новая привычка!",
   "emotionHappy": "Счастлив",
   "emotionGood": "Хорошо",
   "emotionMeh": "Мех",
